@@ -163,6 +163,18 @@ const SimpleDefaults SimpleParser4::IFACE4_DEFAULTS = {
     { "re-detect", Element::boolean, "true" }
 };
 
+/// @brief This table defines default values for dhcp-queue-control in DHCPv4.
+const SimpleDefaults SimpleParser4::DHCP_QUEUE_CONTROL4_DEFAULTS = {
+    { "enable-queue",   Element::boolean, "false"},
+    { "queue-type", Element::string,  "kea-ring4"},
+    { "capacity",  Element::integer, "500"}
+};
+
+/// @brief This defines default values for sanity checking for DHCPv4.
+const SimpleDefaults SimpleParser4::SANITY_CHECKS4_DEFAULTS = {
+    { "lease-checks", Element::string, "warn" }
+};
+
 /// @brief List of parameters that can be inherited to subnet4 scope.
 ///
 /// Some parameters may be defined on both global (directly in Dhcp4) and
@@ -191,14 +203,6 @@ const ParamsList SimpleParser4::INHERIT_TO_SUBNET4 = {
     "t1-percent",
     "t2-percent"
 };
-
-/// @brief This table defines default values for dhcp-queue-control in DHCPv4.
-const SimpleDefaults SimpleParser4::DHCP_QUEUE_CONTROL4_DEFAULTS = {
-    { "enable-queue",   Element::boolean, "false"},
-    { "queue-type", Element::string,  "kea-ring4"},
-    { "capacity",  Element::integer, "500"}
-};
-
 
 /// @}
 
@@ -265,6 +269,18 @@ size_t SimpleParser4::setAllDefaults(isc::data::ElementPtr global) {
     }
 
     cnt += setDefaults(mutable_cfg, DHCP_QUEUE_CONTROL4_DEFAULTS);
+
+    // Set the defaults for sanity-checks.  If the element isn't
+    // there we'll add it.
+    ConstElementPtr sanity_checks = global->get("sanity-checks");
+    if (sanity_checks) {
+        mutable_cfg = boost::const_pointer_cast<Element>(sanity_checks);
+    } else {
+        mutable_cfg = Element::createMap();
+        global->set("sanity-checks", mutable_cfg);
+    }
+
+    cnt += setDefaults(mutable_cfg, SANITY_CHECKS4_DEFAULTS);
 
     return (cnt);
 }
