@@ -513,7 +513,7 @@ TEST_F(SrvConfigTest, unparse) {
     defaults += "\"lease-database\": { \"type\": \"memfile\" },\n";
     defaults += "\"hooks-libraries\": [ ],\n";
     defaults += "\"sanity-checks\": {\n";
-    defaults += "    \"lease-checks\": \"warn\"\n";
+    defaults += "    \"lease-checks\": \"none\"\n";
     defaults += "    },\n";
     defaults += "\"dhcp-ddns\": \n";
 
