@@ -1,3 +1,10 @@
+1607.	[bug]		tmark
+	Corrected an initialization issue which caused lease sanity
+	checking to be enabled inside the Lease File Cleanup (LFC)
+	process.  The LFC cannot meaningfully perform sanity checking
+	as it does not have access to the full server configuration.
+	(Gitlab #686,!403 git TBD)
+
 1606.	[bug]		tmark
 	Corrected an error with retrieving DHCPv6 leases, whose IAID
 	values are larger than int32_t max, from Postgresql lease
